# quakespasm

./: .gitignore  meson.build  meson.options  readme.md
Quake/: Makefile  cl_tent.c  common.c  gl_draw.c  gl_fog.c  gl_mesh.c  gl_model.c  gl_rlight.c  gl_rmain.c  gl_rmisc.c  gl_screen.c  gl_sky.c  gl_texmgr.c  gl_texmgr.h  gl_warp.c  glquake.h  host.c  host_cmd.c  menu.c  meson.build  pl_linux.c  pr_exec.c  qs_ui_hook.h  quakedef.h  r_alias.c  r_brush.c  r_part.c  r_sprite.c  r_world.c  render.h  sbar.c  screen.h  sys_sdl_unix.c  vid.c  view.c
