option(
    'enable_userdirs',
    type: 'boolean',
    value: true,
)

option(
    'use_codec_wave',
    type: 'boolean',
    value: true,
)
option(
    'use_codec_flac',
    type: 'boolean',
    value: false,
)
option(
    'use_codec_mp3',
    type: 'boolean',
    value: true,
)
option(
    'use_codec_vorbis',
    type: 'boolean',
    value: true,
)
option(
    'use_codec_opus',
    type: 'boolean',
    value: false,
)
option(
    'use_codec_mikmod',
    type: 'boolean',
    value: false,
)
option(
    'use_codec_xmp',
    type: 'boolean',
    value: false,
)
option(
    'use_codec_umx',
    type: 'boolean',
    value: false,
)
